--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>   
+<app-header (navComponent)="onNavigate($event)"></app-header>   
 <div class="container">
   <div class="row">
     <div class="col-md-12">     
-      <app-recipe-book></app-recipe-book>
-      <app-shopping-list></app-shopping-list>
+      <app-recipe-book *ngIf="loadedNav === 'recipe'"></app-recipe-book>
+      <app-shopping-list *ngIf="loadedNav === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
